# agora

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  Procfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.kiro/specs/agora-supply-chain-simulator/: design.md  requirements.md  tasks.md
agents/: __init__.py  base_agent.py  factory_agent.py  market_agent.py  message_bus.py  store_agent.py  truck_agent.py  warehouse_agent.py
models/: __init__.py  location.py  message.py  order.py  product.py
simulation/: __init__.py  agent_integration.py  city_map.py  performance_tracker.py  scenarios.py  simulation_manager.py
web/: README.md  app.py
web/static/css/: style.css
web/static/js/: performance-optimizations.js  simulation.js
web/templates/: index.html
